# graphpu

./: .gitignore  Cargo.toml  README.md  build.rs
dataset/: small_data_edge.csv  test_data_edge.csv  test_data_node.csv
examples/: test_file.rs
examples/dataset/: small_data_edge.csv  small_data_edge_raw.csv  test_data_edge.csv  test_data_edge_single.csv  test_data_node.csv  test_data_node_very_very_long_name.csv
lib/naga/: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT
lib/naga/benches/: criterion.rs
lib/naga/cli/: Cargo.toml
lib/naga/debug/: atomic.spvasm  atomic.wgsl
lib/naga/fuzz/: .gitignore  Cargo.toml
lib/naga/fuzz/fuzz_targets/: glsl_parser.rs  ir.rs  spv_parser.rs
lib/naga/src/: lib.rs  span.rs
lib/naga/src/front/: interpolator.rs  mod.rs
lib/naga/src/proc/: layouter.rs  mod.rs  typifier.rs
lib/naga/src/valid/: analyzer.rs  compose.rs  interface.rs  mod.rs
lib/naga/tests/: spirv-capabilities.rs  wgsl-errors.rs
lib/naga/tests/in/: access.wgsl  binding-arrays.param.ron  binding-arrays.wgsl  bitcast.params.ron  bits.wgsl  boids.param.ron  bounds-check-image-rzsw.param.ron  bounds-check-restrict.param.ron  bounds-check-zero.wgsl  collatz.param.ron  control-flow.wgsl  cubeArrayShadow.wgsl  extra.param.ron  extra.wgsl  functions-webgl.wgsl  image.wgsl  interface.param.ron  interface.wgsl  interpolate.wgsl  lexical-scopes.wgsl  multiview.param.ron  multiview.wgsl  padding.param.ron  padding.wgsl  pointers.param.ron  policy-mix.param.ron  policy-mix.wgsl  push-constants.param.ron  push-constants.wgsl  shadow.wgsl  skybox.wgsl  standard.wgsl  texture-arg.param.ron  variations.glsl
lib/naga1/: Makefile  README.md  aa.metal
lib/naga1/cli/src/: main.rs
lib/naga1/debug/: CS_boids.metal  CS_boids.spv  CS_boids.wgsl  atomic.metal  atomic.spv
lib/naga1/fuzz/fuzz_targets/: wgsl_parser.rs
lib/naga1/src/: arena.rs  block.rs
lib/naga1/src/back/: mod.rs
lib/naga1/src/keywords/: mod.rs
lib/naga1/src/proc/: index.rs  namer.rs  terminator.rs
lib/naga1/src/valid/: expression.rs  function.rs  type.rs
lib/naga1/tests/: snapshots.rs
lib/naga1/tests/in/: access.param.ron  bitcast.wgsl  boids.wgsl  bounds-check-image-restrict.param.ron  break-if.wgsl  (+21 more)
resources/: Info.plist  app.icns
resources/dataset/: dataset.json  deezer_europe.csv  musae_git_edges.csv  soc_sign_bitcoinotc.csv  twitch_large.csv
scripts/: macos_build.sh  macos_build_entry.sh  macos_cross_compile.sh  macos_launch.sh  windows_build.sh
src/: app.rs  bootstrap.rs  context.rs  lib.rs  main.rs
src/assets/shaders/: CS_graph_solver.wgsl  S_axis.wgsl  S_bounding_box.wgsl  S_edge.wgsl  S_node.wgsl
src/components/: detail_view.rs  dock_view.rs  drawer_view.rs  export_modal_view.rs  graphics_view.rs  import_modal.rs  import_modal_view.rs  inspector_view.rs  main_canvas.rs  menubar_view.rs  mod.rs  shortcuts.rs  table_view.rs
src/components/drawers/: kernel_view.rs  message_view.rs  mod.rs
src/components/import_modal/: config_page.rs  file_picker_page.rs
src/components/import_modal_view/: config_page.rs  file_picker_page.rs
src/models/: app.rs  app_model.rs  compute.rs  data_model.rs  exhibision_model.rs  graphics.rs  graphics_model.rs  graphics_modules.rs  inspector.rs  mod.rs
src/models/graphics_lib/: bind_group_layout.rs  buffer_dimensions.rs  camera.rs  camera_controls.rs  capture.rs  compute_shader.rs  mod.rs  render_pipeline.rs  texture.rs  unifrom.rs
src/utils/: constant.rs  csv_loader.rs  file.rs  message.rs  mod.rs
src/widgets/: boids.rs  custom3d_wgpu.rs  draw.wgsl  frames.rs  mod.rs  modal.rs  toolbar_modal.rs
src/widgets/boids/: compute.wgsl  draw.wgsl  mod.rs
src/wlib/: buffer.rs  compute_shader.rs  mod.rs  program.rs  renderer.rs
(+100 files in other folders)
