[package]
name = "GraphPU"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = { path = "./lib/egui/egui" }
egui_extras = { version = "0.18.0", path = "./lib/egui/egui_extras" }
eframe = { path = "./lib/egui/eframe", features = ["wgpu"] }
egui-wgpu = { path= "./lib/egui/egui-wgpu" }

bytemuck = { version = "1.9.1" }
wgpu = { version = "0.13", features = ["webgl"] }
pollster = { version = "0.2.5" }

nanorand = { version = "0.7", default-features = false, features = ["wyrand"] }
rfd = "0.9.1"
csv = "1.1.6"
serde = { version = "1.0.140", features = ["derive"] }
strum = { version = "0.24.1", features = ["derive"] }
