[package]
name = "graphpu"
version = "0.2.0"
authors = ["Troy Ni <1272777550@qq.com>", "CPunisher <1343316114@qq.com>"]
edition = "2021"
description = "Next-Gen 3D GPU Graph-Vis App"
documentation = "https://docs.graphpu.com/"
readme = "README.md"
homepage = "https://graphpu.com/"
repository = "https://github.com/TO_BE_PUBLISHED"
license-file = "LICENSE_TO_BE_WRITE.txt"

[features]
test-file = []

[lib]

[[example]]
name = "test_file"
test = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = { path = "./lib/egui/egui" }
egui_extras = { version = "0.18.0", path = "./lib/egui/egui_extras" }
eframe = { path = "./lib/egui/eframe", features = ["wgpu"] }
egui-wgpu = { path= "./lib/egui/egui-wgpu" }

bytemuck = { version = "1.9.1" }
wgpu = { version = "0.13", features = ["webgl"] }
pollster = { version = "0.2.5" }
glam = { version = "0.20.2" }

image = "0.23"
anyhow = "1.0"

nanorand = { version = "0.7", default-features = false, features = ["wyrand"] }
rfd = "0.9.1"
csv = "1.1.6"
serde = { version = "1.0.140", features = ["derive"] }
strum = { version = "0.24.1", features = ["derive"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
